# satellite-project-

./: .gitignore  Makefile  README.md  build-pi6.ps1  build.ps1  clean.ps1  docs.md  run-pi6-qemu.ps1  run-satellite-gui.ps1  run-satellite.ps1  run.ps1  stage2.asm  voyager1_os.asm
pi6/: board_profile.md  cmdline.txt  config.txt  kernel8.S  linker.ld
satellite/: CMakeLists.txt  Makefile  README.md  package.json
satellite/config/: hardware.json  mission.json
satellite/docs/: api.md  architecture.md  interfaces.md  operations.md  requirements.md
satellite/ground_station/: __init__.py  api.py  models.py  simulation.py  tests.py
satellite/ground_station/static/: app.js  index.html  styles.css
satellite/ground_station_node/: server.js  test.js
satellite/include/: commands.h  event_log.h  health.h  mission.h  platform.h  scheduler.h  storage.h  subsystems.h  telemetry.h
satellite/include/drivers/: adc.h  radio.h  sensor.h
satellite/scripts/: build.ps1  clean.ps1  python-command.ps1  run-gui-node.ps1  run-gui.ps1  run.ps1  test-gui-node.ps1  test-gui.ps1  test.ps1
satellite/sim/: README.md  commands.txt
satellite/src/: commands.c  event_log.c  health.c  main.c  mission.c  scheduler.c  storage.c  subsystems.c  telemetry.c
satellite/src/drivers/: adc.c  radio.c  sensor.c
satellite/tests/: expected_behavior.md  test_mission.c
